added local.js call for main yote pages

--- a/yote_root/html/index.html
+++ b/yote_root/html/index.html
@@ -101,5 +101,6 @@
       This page has been viewed <span id="counter"></span> times.
     </footer>
     <script src="/js/bootstrap.js"></script>
+    <script src="/js/local.js"></script>
   </body> 
 </html>
