--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -454,5 +454,6 @@ alert( hello_app.get_my_hash().get( 'store' ).get( 'An_Object' ).get_flavor() );
       This page has been viewed <span id="counter"></span> times.
     </footer>
     <script src="/js/bootstrap.js"></script>
+    <script src="/js/local.js"></script>
 </body>
 </html>
