--- a/yote_root/html/samples.html
+++ b/yote_root/html/samples.html
@@ -515,5 +515,6 @@ if you make changes to the classes, yote must be restarted to see those changes.
 
 !-->
 <script src="/js/bootstrap.js"></script>
+    <script src="/js/local.js"></script>
 </body>
 </html>
