--- a/yote_root/html/install.html
+++ b/yote_root/html/install.html
@@ -6,8 +6,6 @@
     <script src="/yote/js/jquery.cookie.js"></script>
     <script src="/yote/js/jquery.base64.min.js"></script>
     <script src="/yote/js/json2.js"></script>
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" media="all" />
 
     <script src="/js/main.js"></script>
     <script src="/yote/js/yote.js"></script>
@@ -31,12 +29,9 @@
 
   <BODY>
 
-    <DIV class="navbar navbar-fixed-top navbar-inverse" style="position:fixed; height:70px;">
-      <DIV class="navbar-inner">
-	<A class="brand"><img src="yotelogo.png"></A>
-	<UL id="top_nav" class="nav">
-	</UL>
-      </DIV>
+    <DIV class="header">
+	<img src="yotelogo.png">
+	<UL id="top_nav" class="nav"/>
     </DIV>
 
     <SECTION>
@@ -114,7 +109,6 @@
     <footer>
       This page has been viewed <span id="counter"></span> times.
     </footer>
-    
-    <script src="/js/bootstrap.js"></script>
+    <script src="/js/local.js"></script>
   </body>
 </html>
