--- a/yote_root/html/docs.html
+++ b/yote_root/html/docs.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <title>Yote</title>
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.dumper.js"></script>
+    <script src="/yote/js/jquery-1.8.0.min.js"></script>
     <script src="/yote/js/jquery.cookie.js"></script>
     <script src="/yote/js/jquery.base64.min.js"></script>
     <script src="/yote/js/json2.js"></script>
@@ -10,8 +9,6 @@
     <script src="/js/main.js"></script>
     <script src="/yote/js/yote.js"></script>
     <script src="/yote/js/yote.util.js"></script>
-    <link rel="stylesheet" href="/yote/css/jquery.mobile.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/yote/css/ui-lightness/jquery-ui-1.8.23.custom.css" type="text/css" media="all" />
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
     <script>
@@ -24,7 +21,6 @@
 	var count = page_counter.increment( 'Document Page' );
 	$('#counter').empty().append( count );
     });
-    $( '.tooltippy' ).tooltip( { trigger : 'click' } );
     </script>
   </head>
 
