--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Yote Quickstart</title>
-    <script src="/yote/js/jquery-latest.js"></script>
-    <script src="/yote/js/jquery.dumper.js"></script>
+    <script src="/yote/js/jquery-1.8.0.min.js"></script>
     <script src="/yote/js/jquery.cookie.js"></script>
     <script src="/yote/js/jquery.base64.min.js"></script>
     <script src="/yote/js/json2.js"></script>
@@ -11,8 +10,6 @@
     <script src="/js/main.js"></script>
     <script src="/yote/js/yote.js"></script>
     <script src="/yote/js/yote.util.js"></script>
-    <link rel="stylesheet" href="/yote/css/jquery.mobile.css" type="text/css" media="all" />
-    <link rel="stylesheet" href="/yote/css/ui-lightness/jquery-ui-1.8.23.custom.css" type="text/css" media="all" />
     <link href="/yote.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/css/main.css" rel="stylesheet" type="text/css" media="all" />
 
