fixed bug in javascript button actions. added doctype to html pages

--- a/yote_root/html/docs.html
+++ b/yote_root/html/docs.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Yote</title>
@@ -49,33 +50,32 @@
 	</P>
 	<h3>Yote javascript methods</h3>
 	<P>
-	  There are 11 methods that are meant to be invoked when coding yote programs, but only a handful of those will be
-	  invoked commonly.
-	  <DIV class="container">
-	    <DIV class="row">
-	      <DIV class="span2"><strong>common methods :</strong></DIV>
-	      <DIV class="span5">
-		<A href="#" data-toggle="tooltip" class="tooltippy" title="Connect the javascript with the perl">init</A>
+	  There are 11 methods that are meant to be invoked when coding yote programs, 
+	  but only a handful of those will be invoked frequently.
+	  <dl>
+	    <dt>common methods :</dt>
+	      <dd>
+		init
 		fetch_app
-	      </DIV>
-	    </DIV>
-	    <DIV class="row">
-	      <DIV class="span2"><strong>user methods :</strong></DIV><DIV class="span5">
-		create_login
-		login
-		logout
-		is_logged_in
-		get_login
-		fetch_account
-		remove_login
-	      </DIV>
-	      </DIV>
-	  <DIV class="row">
-	      <DIV class="span2"><strong>other methods :</strong></DIV><DIV class="span5">
-		upload
-		fetch_root 
-	      </DIV>
-	  </DIV>
+	      </dd>
+	    <dt>user methods :</dt>
+	    <dd>
+	      create_login
+	      login
+	      logout
+	      is_logged_in
+	      get_login
+	      fetch_account
+	      remove_login
+	    </dd>
+	    <dt>other methods :</dt>
+	    <dd>
+	      upload
+	      fetch_root 
+	    </dd>
+	  </dl>
+	  
+	  
       </SECTION>
       
       <SECTION>
