--- a/yote_root/html/quickstart.html
+++ b/yote_root/html/quickstart.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Yote Quickstart</title>
@@ -404,7 +404,8 @@ my $from_ip =       $env-&gt;{ REMOTE_ADDR };\n\
 
     <SECTION>
       <h1>Quickstart</h1>
-      <p>These excersizes are designed to show one concept at a time in order to learn the ins and outs of programming Yote. For the server side examples, the package is expected to be in the classpath used by Yote. For the client side examples, the appropriate javascript files are expected to be included.</p>
+      <p>These excersizes are designed to show one concept at a time in order to learn the ins and outs of programming Yote. For the server side examples, the package is expected to be in the classpath used by Yote. For the client side examples, the appropriate javascript files are expected to be included. <BR>
+	For these cases, <code>&lt;script src="/yote/js/yote.js"&gt;&lt;/script&gt;</code> must be included.</p>
     </SECTION>
 
     <DIV class="overlesson">
