Brought MySQL driver up to date and out of retirement

--- a/yote_root/html/yote/obj_explore.html
+++ b/yote_root/html/yote/obj_explore.html
@@ -56,9 +56,9 @@
 </script>
 </head>
 <body>
-<h1>Yote Object Explorer</h1>
-
-<div id=root></div>
-
+  <h1>Yote Object Explorer</h1>
+  
+  <div id="root"></div>
+  
 </body>
 </html>
