--- a/yote_root/html/docs.html
+++ b/yote_root/html/docs.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Yote</title>
-    <script src="/yote/js/jquery-1.8.0.min.js"></script>
+    <script src="/yote/js/jquery-latest.js"></script>
     <script src="/yote/js/jquery.cookie.js"></script>
     <script src="/yote/js/jquery.base64.min.js"></script>
     <script src="/yote/js/json2.js"></script>
