--- a/yote_root/html/samples.html
+++ b/yote_root/html/samples.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Yote</title>
-    <script src="/yote/js/jquery-1.8.0.min.js"></script>
+    <script src="/yote/js/jquery-latest.js"></script>
     <script src="/yote/js/jquery.cookie.js"></script>
     <script src="/yote/js/jquery.base64.min.js"></script>
     <script src="/yote/js/json2.js"></script>
@@ -289,7 +289,6 @@ We can use the parts of the snippet to create a real app page.
 	<pre>
 	  &lt;html&gt;&lt;head&gt;&lt;title&gt;Secret Collect&lt;/title&gt;
 	  &lt;script src="/js/jquery-latest.js"&gt;&lt;/script&gt;
-	  &lt;script src="/js/jquery.dumper.js"&gt;&lt;/script&gt;
 	  &lt;script src="/js/jquery.base64.min.js"&gt;&lt;/script&gt;
 	  &lt;script src="/js/json2.js"&gt;&lt;/script&gt;
 	  &lt;script src="/js/yote.js"&gt;&lt;/script&gt;
@@ -448,7 +447,6 @@ if you make changes to the classes, yote must be restarted to see those changes.
   <pre>
     &lt;html&gt;&lt;head&gt;&lt;title&gt;Hello World&lt;/title&gt;
     &lt;script src="/js/jquery-latest.js"&gt;&lt;/script&gt;
-    &lt;script src="/js/jquery.dumper.js"&gt;&lt;/script&gt;
     &lt;script src="/js/jquery.base64.min.js"&gt;&lt;/script&gt;
     &lt;script src="/js/json2.js"&gt;&lt;/script&gt;
     &lt;script src="/js/yote.js"&gt;&lt;/script&gt;
